# SomeGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: color.frag  color.vert  flat_color.vert  quad.frag
editor/: CMakeLists.txt
editor/assets/: default_imgui.ini
editor/assets/models/: axes.glb  cone.glb  cube.glb  two_materials_cube.glb
editor/assets/shaders/: environment_reflection.frag  environment_reflection.vert  flat.vert  pbr.frag  skybox.vert
editor/src/Editor/: EditorApplication.cpp  EditorApplication.hpp  EditorCamera.cpp  EditorCamera.hpp  Outliner.cpp  Outliner.hpp  Properties.cpp  Properties.hpp  Selection.hpp  Viewport.cpp  Viewport.hpp
engine/: CMakeLists.txt
engine/assets/shaders/: pbr.frag  pbr.vert  post_processing.frag  post_processing.vert  shadow_mapping.frag  shadow_mapping.vert  skybox.frag  skybox.vert
engine/ext/entt/: CMakeLists.txt
engine/ext/glad/: CMakeLists.txt
engine/ext/glad/include/glad/: gl.h
engine/ext/imgui/: CMakeLists.txt
engine/ext/stb/: CMakeLists.txt
engine/src/: SomeGraphics.hpp
engine/src/SomeGraphics/: Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  AssimpHelper.cpp  AssimpHelper.hpp  AssimpToGlm.cpp  AssimpToGlm.hpp  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Node.cpp  Node.hpp  PostProcess.cpp  PostProcess.hpp  Program.cpp  Program.hpp  RenderBuffer.cpp  Renderer.cpp  Renderer.hpp  ResourcesCache.cpp  ResourcesCache.hpp  Scene.cpp  Scene.hpp  SceneEntity.cpp  SceneEntity.hpp  Shader.cpp  Shader.hpp  Skin.cpp  (+22 more)
engine/src/SomeGraphics/Rendering/: DepthFrameBuffer.cpp  DepthFrameBuffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Program.cpp  Program.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribute.cpp  VertexAttribute.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/: Application.cpp  Application.hpp  main.cpp
